@@ -40,6 +40,7 @@ Literalinclude options
 .. cssclass:: inc-lines
 .. literalinclude:: literal.inc
    :lines: 6-7,9
+   :lineno-start: 6
 
 .. cssclass:: inc-startend
 .. literalinclude:: literal.inc
